--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,5 +1,6 @@
 .card {
   height: 80px;
+  display: inline-block;
   position: relative;
   margin: 1px;
   box-shadow: 0 0 2px rgba(51, 51, 51, 0.25);
