--- a/src/styles/components/_countries.scss
+++ b/src/styles/components/_countries.scss
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: 20% 80%;
     padding: 8px;
+    margin-top: 5%;
     border-radius: 15px;
     background: $color-3;
     color: $color-1;
@@ -14,6 +15,7 @@
 
       input[type="radio"] {
         transform: translate(-5px, 1px);
+        margin-top: 5%;
       }
     }
   }
@@ -38,6 +40,7 @@
   }
 
   .countries-list {
+    margin-top: 1%;
     display: flex;
     flex-wrap: wrap;
   }
