--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./settings";
+@import "./components/_news";
 @import "./components/navigation";
 @import "./components/logo";
 @import "./components/countries";
